# umbra

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  umbra.example.yml
scripts/: demo.py  demo_curiosity.py  demo_openrouter.py
tests/: test_core.py  test_curiosity.py  test_multi.py  test_server.py
umbra/: __init__.py  __main__.py  alerts.py  config.py  curiosity.py  multi.py  policy.py  scorer.py  server.py  sessions.py  setup.py
